--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,18 +2,25 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 18%
+    right: 90%
+    
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 58%
+    right: 28%
+    
 
 
 @keyframes float1
   0%
     transform: translateY(20px)
+    opacity: 0
+    opacity: 0.5
+    opacity: 0.8
+    opacity: 0.2
+
 
   100%
     transform: translateY(0px)
