--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -24,3 +24,7 @@
 
   100%
     transform: translateY(0px)
+
+
+.cajon.color-acento-contenido
+  background-color: lighten($color-acento-contenido, 18%)
